--- a/src/sass/custom_style.scss
+++ b/src/sass/custom_style.scss
@@ -152,3 +152,11 @@ hr.small {
 .pswp-rotary-focus {
   background: radial-gradient(grey, $mainColor, $hoverColor) !important;
 }
+
+.buttongroup {
+  display: flex;
+  justify-content: center;
+  gap: 50px;
+  padding-top: 10px;
+  padding-bottom: 5px;
+}
