--- a/src/sass/partials/_gallery.scss
+++ b/src/sass/partials/_gallery.scss
@@ -11,8 +11,8 @@
   z-index: 1000;
 
   h1 {
-    margin-top: 10px;
-    margin-left: 30px;
+    margin: auto;
+    text-align: center;
   }
 
   &--open {
@@ -31,24 +31,34 @@
   &__header {
     height: 100px;
     width: 100%;
-    background: $mainColor;
+    // background: $mainColor;
 
     > a {
       position: absolute;
       right: 30px;
-      top: 24px;
+      top: 13px;
       color: $galleryButtonColor;
       font-size: 1.875em;
+      border-radius: 15%;
+      border: 2px solid var(--gallery-button-color);
       width: 50px;
       height: 50px;
-      background: $hoverColor;
+      // background: $hoverColor;
       text-align: center;
       line-height: 50px;
+      > .fa {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+      }
     }
   }
 
   &__footer {
     width: 100%;
+    height: 100px;
     // position: absolute;
     align-self: flex-end;
     bottom: 0;
@@ -56,6 +66,7 @@
     display: flex;
     justify-content: center;
     background: $mainColor;
+    box-shadow: 0 0 15px rgb(40, 40, 40);
   }
 
   &__body {
@@ -75,7 +86,9 @@
     img {
       max-width: 100%;
       list-style: none;
-      border: 1px solid $borderColor;
+      // border: 1px solid $borderColor;
+      border-radius: 8px;
+      box-shadow: 0 0 7px rgb(27, 27, 27);
       display: block;
     }
 
@@ -103,6 +116,10 @@
   .pswp__button--arrow--right:before {
     right: 5%;
   }
+}
+
+.pswp__button--close {
+  border-radius: 15%;
 }
 
 .gallery-button {
